Se agrega icono del sitio y Se agrega SEO

--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MINIFREAK Lovers🎶</title>
+    <link rel="shortcut icon" href="../assets/iconoMF.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../style/style.css">
+
+    <!-- SEO -->
+<meta name="description" content="Leé los testimonios de Maxime Audfray, Victor Morello, Yuli Yolo, Jeremy de Red Means Recording y xl.iks, quienes comparten su experiencia creativa y profesional usando el Arturia MiniFreak.">
+<meta name="keywords" content="Maxime Audfray MiniFreak review, Victor Morello Arturia MiniFreak testimonio, Yuli Yolo destaca MiniFreak, Red Means Recording MiniFreak performance, xl.iks MiniFreak sound design">
+
 </head>
 
 <body>
@@ -17,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo"></a>
+                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo de la pagina Minifreak lover"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -56,7 +62,7 @@
         </div>
         <section class="artistas">
             <div class="artiatas__item">
-                <img class="artista__imagen" src="../assets/maxime_audfray_sm.png" alt="Maxime Audfray">
+                <img class="artista__imagen" src="../assets/maxime_audfray_sm.png" alt="Foto de Maxime Audfray tocando un sintetizador minifreak">
                 <div class="artista-info">
                     <h4 class="artista__nombre">Maxime Audfray</h4>
                     <p class="artista__destaca">KiK</p>
@@ -69,7 +75,7 @@
                 </div>
             </div>
             <div class="artiatas__item">
-                <img class="artista__imagen" src="../assets/victor_morell_sm.png" alt="Maxime Audfray">
+                <img class="artista__imagen" src="../assets/victor_morell_sm.png" alt="Foto de Victor Morello en un liveset">
                 <div class="artista-info">
                     <h4 class="artista__nombre">Victor Morello</h4>
                     <p class="artista__destaca">Impale</p>
@@ -86,7 +92,7 @@
                 </div>
             </div>
             <div class="artiatas__item">
-                <img class="artista__imagen" src="../assets/yuli_yolo_sm.png" alt="Maxime Audfray">
+                <img class="artista__imagen" src="../assets/yuli_yolo_sm.png" alt="Foto de Yuli Yolo en una entrevista">
                 <div class="artista-info">
                     <h4 class="artista__nombre">Yuli Yolo</h4>
                     <p class="artista__destaca">Seet</p>
@@ -103,7 +109,7 @@
                 </div>
             </div>
             <div class="artiatas__item">
-                <img class="artista__imagen" src="../assets/red_means_recording_sm.png" alt="Maxime Audfray">
+                <img class="artista__imagen" src="../assets/red_means_recording_sm.png" alt="Foto de Jeremy en el estudio de grabacion Red Means Recording">
                 <div class="artista-info">
                     <h4 class="artista__nombre">Red Means Recording</h4>
                     <p class="artista__destaca">DFAME</p>
