--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MINIFREAK Lovers🎶</title>
+    <link rel="shortcut icon" href="../assets/iconoMF.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -14,6 +15,11 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../style/style.css">
+
+    <!-- SEO -->
+<meta name="description" content="Registrate en nuestra página, accedé a contenido exclusivo y dejá tu puntaje para ayudarnos a mejorar. Encontrá aquí todas las vías de contacto y participación.">
+<meta name="keywords" content="registro de usuario online, contacto soporte técnico, crear cuenta en la página, enviar consulta web, calificar sitio web">
+
 </head>
 
 <body>
@@ -21,7 +27,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo"></a>
+                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo de la pagina Minifreak lover"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
