--- a/pages/news.html
+++ b/pages/news.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MINIFREAK Lovers🎶</title>
+    <link rel="shortcut icon" href="../assets/iconoMF.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../style/style.css">
+
+    <!-- SEO -->
+<meta name="description" content="Descubrí las características de Circuit Rhythm, DeepMind, JX-08, Polybrute, TR-08 y Wavestate mkII para ampliar tu flujo creativo y potenciar tu setup híbrido con el Arturia MiniFreak.">
+<meta name="keywords" content="Integración rápida y creativa con Circuit Rhythm, Potenciá tu sonido con DeepMind, Sonido clásico renovado con JX-08, Expresividad y síntesis avanzada con PolyBrute, Wave sequencing moderno con Wavestate mkII">
+
 </head>
 
 <body>
@@ -18,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo"></a>
+                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo de la pagina Minifreak lover"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -57,21 +63,21 @@
         </div>
         <section class="nuevos-sintes">
             <div class="sinte-item">
-                <img class="sinte__imagen" src="../assets/circuitry-480.jpg" alt="Circuit Rhythm">
+                <img class="sinte__imagen" src="../assets/circuitry-480.jpg" alt="Foto frontal de la Novation Circuit Rhythm">
                 <h4 class="sinte__nombre">Circuit Rhythm</h4>
                 <p class="sinte_descripcion">Circuit Rhythm es un potente y versátil sampler y caja de ritmos
                     independiente para el beatmaker moderno. Graba directamente en el hardware, luego esculpe, invierte,
                     reproduce en bucle, remuestrea y reproduce cromáticamente, todo en la caja. Pruebala!</p>
             </div>
             <div class="sinte-item">
-                <img class="sinte__imagen" src="../assets/DeepMind-480.jpg" alt="DeepMind">
+                <img class="sinte__imagen" src="../assets/DeepMind-480.jpg" alt="Foto frontal de las tres versiones del Behringer DeepMind">
                 <h4 class="sinte__nombre">DeepMind</h4>
                 <p class="sinte_descripcion">Con la creación de DEEPMIND 6, el sintetizador polifónico analógico
                     definitivo de 6 voces es por fin una realidad. DEEPMIND 6 te permite evocar prácticamente cualquier
                     sonido que puedas imaginar con una precisión y facilidad incomparables. Increible!</p>
             </div>
             <div class="sinte-item">
-                <img class="sinte__imagen" src="../assets/jx-08-480.jpg" alt="JX-08">
+                <img class="sinte__imagen" src="../assets/jx-08-480.jpg" alt="Foto frontal del Roland JX-08 con su teclado de dos octavas">
                 <h4 class="sinte__nombre">JX-08</h4>
                 <p class="sinte_descripcion">Esta versión moderna mantiene el diseño original del JX-8P, pero hemos
                     añadido una serie de actualizaciones que llevan la experiencia a otro nivel. Explora los más de 100
@@ -80,21 +86,21 @@
         </section>
         <section class="nuevos-sintes">
             <div class="sinte-item">
-                <img class="sinte__imagen" src="../assets/polibrute-480.jpg" alt="Polybrute">
+                <img class="sinte__imagen" src="../assets/polibrute-480.jpg" alt="Foto frontal del Arturia Polybrute">
                 <h4 class="sinte__nombre">Polybrute</h4>
                 <p class="sinte_descripcion">El PolyBrute es más que un sintetizador: es un monstruo analógico de 6
                     voces con una expresividad y unas capacidades de transformación del sonido sin precedentes. Está
                     creado para que toques con plena seguridad, componer con fluidez y explorar!</p>
             </div>
             <div class="sinte-item">
-                <img class="sinte__imagen" src="../assets/tr-08-480.jpg" alt="TR-08">
+                <img class="sinte__imagen" src="../assets/tr-08-480.jpg" alt="Foto frontal de la Roland TR-08">
                 <h4 class="sinte__nombre">TR-08</h4>
                 <p class="sinte_descripcion">La TR-08 es una réplica obsesivamente fiel y detallada de la legendaria
                     TR-808, sin duda la caja de ritmos más famosa e influyente jamás creada. Después de provocar un giro
                     monumental en el sonido de la música, la «808» ha seguido dando culto!</p>
             </div>
             <div class="sinte-item">
-                <img class="sinte__imagen" src="../assets/wavestate-480.jpg" alt="Wavestate">
+                <img class="sinte__imagen" src="../assets/wavestate-480.jpg" alt="Foto frontal del Korg Wavestate MK2">
                 <h4 class="sinte__nombre">Wavestate mkII</h4>
                 <p class="sinte_descripcion">El legendario KORG Wavestation presentó al mundo las secuencias de ondas
                     Wave Sequencing, transformando muestras en sonidos que nadie había oído antes. Los emblemáticos
