--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MINIFREAK Lovers🎶</title>
+    <link rel="shortcut icon" href="./assets/iconoMF.png" type="image/x-icon">
 
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,7 +18,7 @@
     <header><!-- HEADER-NAVBAR -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a href="#"><img class="header__logo" src="./assets/minifreak-logo.png" alt="Logo"></a>
+                <a href="#"><img class="header__logo" src="./assets/minifreak-logo.png" alt="Logo de la pagina Minifreak lover"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -59,7 +60,7 @@
 
 
             <div class="imagen-minifreak">
-                <img class="main-imagen" src="./assets/minifreak-frontal-sm.png" alt="Minifreak frontal">
+                <img class="main-imagen" src="./assets/minifreak-frontal-sm.png" alt="Imagen del sintetizador Minifreak vista frontal">
             </div>
             <section class="main-section"> <!-- INTRO -->
                 <article class="intro-items">
@@ -148,7 +149,7 @@
         </div>
     </main>
     <a href="./pages/contacto.html"><img class="suscripcion" src="./assets/sintetizador-fixed-sm.png"
-            alt="Suscripción y contacto"></a>
+            alt="Icono de acceso rapido a la seccion de contacto y suscripcion"></a>
 
     <!-- FOOTER -->
     <footer>
