--- a/pages/features.html
+++ b/pages/features.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MINIFREAK Lovers🎶</title>
+    <link rel="shortcut icon" href="../assets/iconoMF.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../style/style.css">
+
+    <!-- SEO -->
+<meta name="description" content="Esta sección explica cómo los Osciladores digitales, el Filtro Analógico, la Envolvente Cíclica y la Matriz de Modulación trabajan juntos en el Arturia MiniFreak para crear sonidos dinámicos y expresivos. Juntos forman el núcleo del instrumento, permitiendo transformar y animar cualquier timbre con flexibilidad y carácter.">
+<meta name="keywords" content="Matriz de Modulación Arturia, Matriz unica Arturia con tres asignaciones, Filtro Análogo legendario Arturia, Envolvente Cíclica Arturia, Osciladores de dos veces, Osciladores Freak Arturia, ">
+
 </head>
 
 <body>
@@ -17,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo"></a>
+                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo de la pagina Minifreak lover"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -67,8 +73,8 @@
                     de modulación, se realiza la conexión. Verá claramente si una cantidad de modulación está
                     configurada en algo diferente a cero, ya que el LED para esa conexión se encenderá.</p>
             </div>
-            <img class="matriz-imagen" src="../assets/matriz.png" alt="Matriz">
-            <img class="filtro-imagen" src="../assets/filtro.png" alt="Filtro">
+            <img class="matriz-imagen" src="../assets/matriz.png" alt="Foto de la Matriz de modulacion del minifreak">
+            <img class="filtro-imagen" src="../assets/filtro.png" alt="Foto de los controles del Filtro del minifreak">
             <div class="caja filtro">
                 <h4>Filtro Análogo</h4>
                 <p>Los sintetizadores análogos de Arturia son famosos por sus filtros, y el filtro análogo en
@@ -91,8 +97,8 @@
                     Subida/Forma, Caída/Forma y Retención/Sostenido controlan las diferentes
                     etapas del ciclo y el comportamiento de cada una.</p>
             </div>
-            <img class="envolvente-imagen" src="../assets/envolv-ciclica.png" alt="Envolvente ciclica">
-            <img class="osciladores-imagen" src="../assets/oscilador.png" alt="Osciladores">
+            <img class="envolvente-imagen" src="../assets/envolv-ciclica.png" alt="Foto de los controles de la Envolvente ciclica del minifreak">
+            <img class="osciladores-imagen" src="../assets/oscilador.png" alt="Foto de los controles de parametros del Oscilador del minifreak">
             <div class="caja osciladores">
                 <h4>Osciladores</h4>
                 <p>Estos controles le brindan acceso rápido a las diferentes propiedades de los dos Osciladores
