Se cambia color de texto de footer

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
     <footer>
         <div class="pie-de-pagina">
             <div class="derechos">
-                <h4>Pagina diseñada por Sebas.</h4>
-                <h4>Copyright © 2025 Sebastian L.</h4>
+                <h2>Pagina diseñada por Sebas.</h2>
+                <h3>Copyright © 2025 Sebastian Lusher.</h3>
             </div>
             <div class="redes">
                 <a href="http://www.instagram.com" target="_blank">
