Actualizacion SEO index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="./style/style.css">
+
+    <!-- SEO -->
+    <meta name="description"
+        content="Pagina deicada a destacar las caracteristicas principales y curiosas del sintetizador hibrido MINIFREAK de Arturia.">
+    <meta name="keywords"
+        content="Arturia, Minifreak, sintetizador hibrido, caracteristicas minifreak, Vocoder, Spice & Dice, minifreak v">
+    <!--5 keyword-->
+
+    <!-- OPCIONALES -->
+    <meta name="author" content="Sebastian L.">
+    <meta name="owner" content="Sebastian L.">
+
+    <!-- Open graph -->
+    <meta property="og:title" content="MINIFREAK Lovers 🎶 - Home">
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/Sebasrga/minifreak-lover/refs/heads/main/assets/minifreak-logo.png">
+    <meta property="og:url" content="https://sebasrga.github.io/minifreak-lover/">
+    <meta property="og:type" content="Website" />
+    <meta property="og:description"
+        content="Pagina deicada a destacar las caracteristicas principales y curiosas del sintetizador hibrido MINIFREAK de Arturia.">
 </head>
 
 <body>
