Se agrega mixing y se corrige textos en artistas

--- a/index.html
+++ b/index.html
@@ -38,29 +38,30 @@
     <header><!-- HEADER-NAVBAR -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a href="#"><img class="header__logo" src="./assets/minifreak-logo.png" alt="Logo de la pagina Minifreak lover"></a>
+                <a href="#"><img class="header__logo" src="./assets/minifreak-logo.png"
+                        alt="Logo de la pagina Minifreak lover"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
+                    <ul class="navbar-nav menu-flex">
+                        <li class="nav-item it-hme">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item it-crc">
                             <a class="nav-link" href="./pages/features.html">Características</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item it-art">
                             <a class="nav-link" href="./pages/artistas.html">Artistas</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item it-nws">
                             <a class="nav-link" href="./pages/news.html">Otros sintes</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item it-cnt">
                             <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item it-mnf">
                             <a class="nav-link disabled" aria-disabled="true">MiniFreak | Sintetizador hibrido
                                 algorítmico</a>
                         </li>
@@ -80,7 +81,8 @@
 
 
             <div class="imagen-minifreak">
-                <img class="main-imagen" src="./assets/minifreak-frontal-sm.png" alt="Imagen del sintetizador Minifreak vista frontal">
+                <img class="main-imagen" src="./assets/minifreak-frontal-sm.png"
+                    alt="Imagen del sintetizador Minifreak vista frontal">
             </div>
             <section class="main-section"> <!-- INTRO -->
                 <article class="intro-items">
