--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -13,8 +13,10 @@
     <link rel="stylesheet" href="../style/style.css">
 
     <!-- SEO -->
-<meta name="description" content="Leé los testimonios de Maxime Audfray, Victor Morello, Yuli Yolo, Jeremy de Red Means Recording y xl.iks, quienes comparten su experiencia creativa y profesional usando el Arturia MiniFreak.">
-<meta name="keywords" content="Maxime Audfray MiniFreak review, Victor Morello Arturia MiniFreak testimonio, Yuli Yolo destaca MiniFreak, Red Means Recording MiniFreak performance, xl.iks MiniFreak sound design">
+    <meta name="description"
+        content="Leé los testimonios de Maxime Audfray, Victor Morello, Yuli Yolo, Jeremy de Red Means Recording y xl.iks, quienes comparten su experiencia creativa y profesional usando el Arturia MiniFreak.">
+    <meta name="keywords"
+        content="Maxime Audfray MiniFreak review, Victor Morello Arturia MiniFreak testimonio, Yuli Yolo destaca MiniFreak, Red Means Recording MiniFreak performance, xl.iks MiniFreak sound design">
 
 </head>
 
@@ -23,7 +25,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo de la pagina Minifreak lover"></a>
+                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png"
+                        alt="Logo de la pagina Minifreak lover"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,7 +65,8 @@
         </div>
         <section class="artistas">
             <div class="artiatas__item">
-                <img class="artista__imagen" src="../assets/maxime_audfray_sm.png" alt="Foto de Maxime Audfray tocando un sintetizador minifreak">
+                <img class="artista__imagen" src="../assets/maxime_audfray_sm.png"
+                    alt="Foto de Maxime Audfray tocando un sintetizador minifreak">
                 <div class="artista-info">
                     <h4 class="artista__nombre">Maxime Audfray</h4>
                     <p class="artista__destaca">KiK</p>
@@ -75,7 +79,8 @@
                 </div>
             </div>
             <div class="artiatas__item">
-                <img class="artista__imagen" src="../assets/victor_morell_sm.png" alt="Foto de Victor Morello en un liveset">
+                <img class="artista__imagen" src="../assets/victor_morell_sm.png"
+                    alt="Foto de Victor Morello en un liveset">
                 <div class="artista-info">
                     <h4 class="artista__nombre">Victor Morello</h4>
                     <p class="artista__destaca">Impale</p>
@@ -83,7 +88,8 @@
                         máquina, sabía que quería probar un par de sonidos de bajo exagerados con cantidades generosas
                         (casi cómicas) de distorsión. Impale es uno de ellos. Consiste en usar sonidos simples al
                         principio, seguidos de extensas cadenas de procesamiento que incluyen varias etapas de
-                        distorsión ingeniosas. La capacidad de apilar efectos en MiniFreak (aquí, un Chorus seguido de dos efectos de Distorsión
+                        distorsión ingeniosas. La capacidad de apilar efectos en MiniFreak (aquí, un Chorus seguido de
+                        dos efectos de Distorsión
                         al final) permite emular este tipo de cadena.</p>
                     <p class="artista__texto">Soy productor de música electrónica, diseñador de sonido y entusiasta de
                         la informática. Trabajé durante 5 años como diseñador de sonido interno para Arturia, donde me
@@ -109,7 +115,8 @@
                 </div>
             </div>
             <div class="artiatas__item">
-                <img class="artista__imagen" src="../assets/red_means_recording_sm.png" alt="Foto de Jeremy en el estudio de grabacion Red Means Recording">
+                <img class="artista__imagen" src="../assets/red_means_recording_sm.png"
+                    alt="Foto de Jeremy en el estudio de grabacion Red Means Recording">
                 <div class="artista-info">
                     <h4 class="artista__nombre">Red Means Recording</h4>
                     <p class="artista__destaca">DFAME</p>
@@ -175,7 +182,9 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
