Se agrega extend y se corrige imagen main resp

--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -64,7 +64,7 @@
             <h1>Artistas que experimentan con Minifreak</h1>
         </div>
         <section class="artistas">
-            <div class="artiatas__item">
+            <div class="artiatas__item maxime">
                 <img class="artista__imagen" src="../assets/maxime_audfray_sm.png"
                     alt="Foto de Maxime Audfray tocando un sintetizador minifreak">
                 <div class="artista-info">
@@ -78,7 +78,7 @@
                         le gusta hacer ruidos con máquinas como pasatiempo.</p>
                 </div>
             </div>
-            <div class="artiatas__item">
+            <div class="artiatas__item victor">
                 <img class="artista__imagen" src="../assets/victor_morell_sm.png"
                     alt="Foto de Victor Morello en un liveset">
                 <div class="artista-info">
@@ -97,7 +97,7 @@
                         PolyBrute. Actualmente creo música experimental como Zero Crossing Point.</p>
                 </div>
             </div>
-            <div class="artiatas__item">
+            <div class="artiatas__item yuli">
                 <img class="artista__imagen" src="../assets/yuli_yolo_sm.png" alt="Foto de Yuli Yolo en una entrevista">
                 <div class="artista-info">
                     <h4 class="artista__nombre">Yuli Yolo</h4>
@@ -114,7 +114,7 @@
                         expresividad.</p>
                 </div>
             </div>
-            <div class="artiatas__item">
+            <div class="artiatas__item redmeans">
                 <img class="artista__imagen" src="../assets/red_means_recording_sm.png"
                     alt="Foto de Jeremy en el estudio de grabacion Red Means Recording">
                 <div class="artista-info">
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <!-- VIDEOS -->
-            <div class="artiatas__item">
+            <div class="artiatas__item xliks">
                 <div class="artista__videito">
                     <iframe width="400" height="300" src="https://www.youtube.com/embed/CHoFU_rTWs0?si=5WCelmA7dlXN0_dm"
                         title="YouTube video player" frameborder="0"
