Se agrega responsive celu y tablet header y footer. Tambien se agregan iconos el footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -164,24 +164,27 @@
             </div>
             <div class="redes">
                 <a href="http://www.instagram.com" target="_blank">
-                    <h4>Instagram</h4>
+                    <!-- <h4>Instagram</h4> -->
+                    <img src="../assets/instagram-sm.png"
+                        alt="logo de acceso a la res social instagram de minifrerak lover">
                 </a>
                 <a href="http://www.facebook.com" target="_blank">
-                    <h4>Facebook</h4>
+                    <!-- <h4>Facebook</h4> -->
+                    <img src="../assets/facebook-sm.png"
+                        alt="logo de acceso a la res social facebook de minifrerak lover">
                 </a>
                 <a href="http://www.x.com" target="_blank">
-                    <h4>X</h4>
+                    <!-- <h4>X</h4> -->
+                    <img src="../assets/X-sm.png" alt="logo de acceso a la res social X de minifrerak lover">
                 </a>
-
             </div>
             <div class="enlaces">
                 <a href="http://www.arturia.com" target="_blank">
                     <h4>Sitio oficial de Arturia</h4>
                 </a>
-                <a href="https://www.mercadolibre.com.ar/tienda/arturia#from=share_eshop" target="_blank">
+                <!-- <a href="https://www.mercadolibre.com.ar/tienda/arturia#from=share_eshop" target="_blank">
                     <h4>Arturia oficial en mercado libre</h4>
-                </a>
-
+                </a> -->
             </div>
         </div>
     </footer>
