Se mejora features responsive tablet

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,8 +17,10 @@
     <link rel="stylesheet" href="../style/style.css">
 
     <!-- SEO -->
-<meta name="description" content="Registrate en nuestra página, accedé a contenido exclusivo y dejá tu puntaje para ayudarnos a mejorar. Encontrá aquí todas las vías de contacto y participación.">
-<meta name="keywords" content="registro de usuario online, contacto soporte técnico, crear cuenta en la página, enviar consulta web, calificar sitio web">
+    <meta name="description"
+        content="Registrate en nuestra página, accedé a contenido exclusivo y dejá tu puntaje para ayudarnos a mejorar. Encontrá aquí todas las vías de contacto y participación.">
+    <meta name="keywords"
+        content="registro de usuario online, contacto soporte técnico, crear cuenta en la página, enviar consulta web, calificar sitio web">
 
 </head>
 
@@ -27,7 +29,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo de la pagina Minifreak lover"></a>
+                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png"
+                        alt="Logo de la pagina Minifreak lover"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -152,6 +155,7 @@
                 Para ayudarnos a mejorar danos un puntaje en forma anónima.</h5>
         </div>
 
+        
     </main>
 
     <!-- FOOTER -->
