Se agrega slider en contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -155,8 +155,87 @@
                 Para ayudarnos a mejorar danos un puntaje en forma anónima.</h5>
         </div>
 
-        
+        <section class="slider">
+            <div class="slider-track">
+                <div class="slide">
+                    <img src="../assets/sl-808.jpg" alt="slideshow logo de 808">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-909.jpg" alt="slideshow logo de 909">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-ableton.jpg" alt="slideshow logo de ableton">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-akai.jpg" alt="slideshow logo de akai">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-arturia.jpg" alt="slideshow logo de arturia">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-behringer.jpg" alt="slideshow logo de behringer">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-flstudio.jpg" alt="slideshow logo de flstudio">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-korg.jpg" alt="slideshow logo de korg">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-midiplus.jpg" alt="slideshow logo de midiplus">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-novation.jpg" alt="slideshow logo de novation">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-roland.jpg" alt="slideshow logo de roland">
+                </div>
+
+                <div class="slide">
+                    <img src="../assets/sl-808.jpg" alt="slideshow logo de 808">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-909.jpg" alt="slideshow logo de 909">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-ableton.jpg" alt="slideshow logo de ableton">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-akai.jpg" alt="slideshow logo de akai">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-arturia.jpg" alt="slideshow logo de arturia">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-behringer.jpg" alt="slideshow logo de behringer">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-flstudio.jpg" alt="slideshow logo de flstudio">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-korg.jpg" alt="slideshow logo de korg">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-midiplus.jpg" alt="slideshow logo de midiplus">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-novation.jpg" alt="slideshow logo de novation">
+                </div>
+                <div class="slide">
+                    <img src="../assets/sl-roland.jpg" alt="slideshow logo de roland">
+                </div>
+
+            </div>
+        </section>
+
+
+
     </main>
+
+
+
+
+
 
     <!-- FOOTER -->
     <footer>
