Se corrigen detalles finales en contactos

--- a/pages/news.html
+++ b/pages/news.html
@@ -13,8 +13,10 @@
     <link rel="stylesheet" href="../style/style.css">
 
     <!-- SEO -->
-<meta name="description" content="Descubrí las características de Circuit Rhythm, DeepMind, JX-08, Polybrute, TR-08 y Wavestate mkII para ampliar tu flujo creativo y potenciar tu setup híbrido con el Arturia MiniFreak.">
-<meta name="keywords" content="Integración rápida y creativa con Circuit Rhythm, Potenciá tu sonido con DeepMind, Sonido clásico renovado con JX-08, Expresividad y síntesis avanzada con PolyBrute, Wave sequencing moderno con Wavestate mkII">
+    <meta name="description"
+        content="Descubrí las características de Circuit Rhythm, DeepMind, JX-08, Polybrute, TR-08 y Wavestate mkII para ampliar tu flujo creativo y potenciar tu setup híbrido con el Arturia MiniFreak.">
+    <meta name="keywords"
+        content="Integración rápida y creativa con Circuit Rhythm, Potenciá tu sonido con DeepMind, Sonido clásico renovado con JX-08, Expresividad y síntesis avanzada con PolyBrute, Wave sequencing moderno con Wavestate mkII">
 
 </head>
 
@@ -24,7 +26,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo de la pagina Minifreak lover"></a>
+                <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png"
+                        alt="Logo de la pagina Minifreak lover"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -63,21 +66,24 @@
         </div>
         <section class="nuevos-sintes">
             <div class="sinte-item">
-                <img class="sinte__imagen" src="../assets/circuitry-480.jpg" alt="Foto frontal de la Novation Circuit Rhythm">
+                <img class="sinte__imagen" src="../assets/circuitry-480.jpg"
+                    alt="Foto frontal de la Novation Circuit Rhythm">
                 <h4 class="sinte__nombre">Circuit Rhythm</h4>
                 <p class="sinte_descripcion">Circuit Rhythm es un potente y versátil sampler y caja de ritmos
                     independiente para el beatmaker moderno. Graba directamente en el hardware, luego esculpe, invierte,
                     reproduce en bucle, remuestrea y reproduce cromáticamente, todo en la caja. Pruebala!</p>
             </div>
             <div class="sinte-item">
-                <img class="sinte__imagen" src="../assets/DeepMind-480.jpg" alt="Foto frontal de las tres versiones del Behringer DeepMind">
+                <img class="sinte__imagen" src="../assets/DeepMind-480.jpg"
+                    alt="Foto frontal de las tres versiones del Behringer DeepMind">
                 <h4 class="sinte__nombre">DeepMind</h4>
                 <p class="sinte_descripcion">Con la creación de DEEPMIND 6, el sintetizador polifónico analógico
                     definitivo de 6 voces es por fin una realidad. DEEPMIND 6 te permite evocar prácticamente cualquier
                     sonido que puedas imaginar con una precisión y facilidad incomparables. Increible!</p>
             </div>
             <div class="sinte-item">
-                <img class="sinte__imagen" src="../assets/jx-08-480.jpg" alt="Foto frontal del Roland JX-08 con su teclado de dos octavas">
+                <img class="sinte__imagen" src="../assets/jx-08-480.jpg"
+                    alt="Foto frontal del Roland JX-08 con su teclado de dos octavas">
                 <h4 class="sinte__nombre">JX-08</h4>
                 <p class="sinte_descripcion">Esta versión moderna mantiene el diseño original del JX-8P, pero hemos
                     añadido una serie de actualizaciones que llevan la experiencia a otro nivel. Explora los más de 100
@@ -136,13 +142,13 @@
                 <a href="http://www.arturia.com" target="_blank">
                     <h4>Sitio oficial de Arturia</h4>
                 </a>
-                <!-- <a href="https://www.mercadolibre.com.ar/tienda/arturia#from=share_eshop" target="_blank">
-                    <h4>Arturia oficial en mercado libre</h4>
-                </a> -->
+
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
